adeed footer and fixed aligns

--- a/root.css
+++ b/root.css
@@ -9,10 +9,22 @@ body{
 
 }
 h1 h2 h3 h4 h5 h6{
-    margin: 0 0 0 0; 
+    margin: 0; 
 }
 *{
     justify-content:space-around;
     align-items: center;
     font-family: 'Fira Sans', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100vw;
+    height: 200px;
+    background-color: #ffffff;
+    margin-left: calc((100% - 100vw) / 2); /* footer buug fix*/
 }
