--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     margin: 10px;
-    font-size: 20px;
+    font-size: 16px;
 }
 .nav-button{
     color: #007a33;
@@ -14,7 +14,7 @@
     border-radius: 5px;
     padding: 10px 20px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -22,9 +22,8 @@
 
 .banner{
     display: flex;
-    flex-wrap: wrap;
+    flex: 1;
     width: 100%;
-
     max-width: 1200px;
     justify-content: space-between;
     background-color: #d3eae1;
@@ -33,32 +32,19 @@
 }
 
 .banner-picture img{
-    display: flex-end;
+    flex:2;
     align-items: center;
     justify-content: center;
-    position: relative;
     object-fit: cover;
     width: 300px;
     height: 300px;
 }
-/* .btn-primary{
-    font-weight: bold;
-    background-color: #006A50;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 14px;
-    cursor: pointer;
-} */
-.banner-container{
-    display: flex;
-    flex-wrap: wrap;
-}
+
 .banner-l1{
-    font-weight: normal;
+    font-weight: bold;
     font-size: 20px;
-    color: gray;
+    padding-bottom: 20px;
+    color: #333;
 }
 .banner-l2{
     font-size: 48px;
@@ -66,10 +52,61 @@
 .banner-content{
     max-width: 580px;
 }
+#explore-btn{
+    margin-top: 30px;
+}
+/* pillars Section  */
+.pillars-container h2{
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 32px;
+}
+
+/* pillars Cards Container */
+.pillar-cards-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+/* Individual pillar Card */
+.pillar-card {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    gap: 0 10px;
+    width: 100%;
+}
+
+/* Icon Styling */
+.pillar-card .icon img {
+    width: 50px;
+    height: 50px;
+}
+
+/* Card Title */
+.pillar-card h4 {
+    font-size: 18px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+/* Card Description */
+.pillar-card p {
+    font-size: 12px;
+    color: #555;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+
+
 
 /* Vision Section  */
 .vision-container {
     padding: 0 0 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 /* Intro Section */
@@ -162,13 +199,15 @@
     border-radius: 10px;
 
 }
-.quote{
+.quote p{
     margin: 0;
     position: relative;
     font-size: 14px;
+    padding-bottom: 20px;
+
 }
 .quote strong{
-    font-size: 18px;    
+    font-size: 16px;    
 }
 .quote span{
     font-size: 12px;    
@@ -179,7 +218,7 @@
 
 /* Recent News Section */
 .recent-news-section {
-    padding: 40px 0px;
+    padding: 20px 0px;
     line-height: 1.6;
 }
 
@@ -199,7 +238,6 @@
     flex-direction: column;
     gap: 20px;
     align-items: center;
-    margin: 30px;
 }
 
 .news-card {
@@ -207,7 +245,7 @@
     border-radius: 10px;
     display: flex;
     gap: 20px;
-    padding: 30px;
+    padding: 20px;
     width: 100%;
 }
 
@@ -236,6 +274,7 @@
 }
 
 .news-content p {
+    padding-top: 10px;
     font-size: 12px;
     color: #555;
     line-height: 1.6;
@@ -254,41 +293,144 @@
     cursor: pointer;
 }
 
-
-
-
-/* Donate Section */
-.donate-section {
-    padding: 40px 0;
-    text-align: center;
+.donate{
+    display: flex;
+    flex-direction: column;
 }
-
-.donate-section h2 {
+.donate h2{
     font-size: 32px;
-    color: #333;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
-
-.donate-section p {
-    font-size: 16px;
-    color: #555;
-    line-height: 1.6;
-    margin-bottom: 30px;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
+.donate p{
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 20px;
+    text-align: center;
+    margin: 0px 80px 20px 80px;
 }
 
-/* Donation Buttons */
-.donate-button{
-    display: inline;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    background-color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 24px;
-    padding: 10px 20px;
-    color: gray;
+.donation-options {
+    display: flex;
     gap: 20px;
+}
+
+.donation-button {
+    padding: 20px 30px;
+    font-weight: bold;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background: white;
+    cursor: pointer;
+    font-size: 40px;
+    color: #666;
+    font-weight: bolder;
+    min-width: 120px;
+}
+
+.donation-button.selected {
+    background-color: #e0f3e9;
+}
+
+.donation-button:hover {
+    background-color: #e0f3e9;
+}
+
+.custom-amount {
+    min-width: 70%;
+    padding: 15px;
+    margin: 0 auto;
+    border: none;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.donate-now {
+    background-color: #006A50;
+    color: white;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.newsletter {
+    background-color: #006A5044;
+    padding: 40px 20px;
+    border-radius: 12px;
+    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.newsletter h2{
+    font-size: 32px;
+    margin-bottom: 5px;
+}
+.newsletter p{
+    font-size: 14px;
+    color: #666;
+    margin: 20px 200px 20px 200px;
+    justify-content: center;
+    text-align: center;
+}
+.subscription-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px auto;
+}
+.email-input {
+    width: 500px;
+    padding: 14px;
+    margin: 20px auto;
+    border: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.subscribe-button {
+    background-color: #006A50;
+    font-weight: bold;
+    color: white;
+    padding: 14px 30px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.spam-notice {
+    color: #666;
+    font-size: 14px;
+    margin-top: 15px;
+}
+
+.social-links {
+    margin-top: 40px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+}
+.footer h2{
+    padding: 20px;
+}
+.footer-divider {
+    width: 80%;
+    border: none;
+    height: 1px;
+    background-color: #dedede;
 }
